hphp/hack/test/typecheck/reactive/print_in_rx8.php.exp
File "print_in_rx8.php", line 4, characters 3-9:
`echo` or `print` are not allowed in reactive functions. (Typing[4226])
File "print_in_rx8.php", line 5, characters 3-6:
`echo` or `print` are not allowed in reactive functions. (Typing[4226])
File "print_in_rx8.php", line 13, characters 5-8:
`echo` or `print` are not allowed in reactive functions. (Typing[4226])
File "print_in_rx8.php", line 14, characters 5-11:
`echo` or `print` are not allowed in reactive functions. (Typing[4226])
